--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,3 @@
-sudo: false
-
-
 language: python
 
 
@@ -9,18 +6,10 @@ python:
     - nightly
 
 
-os:
-    - linux
-#    - osx
+before_install: pip install anglerfish --quiet
 
 
-before_install: pip install --upgrade pip setuptools wheel anglerfish --quiet
-
-
-install: true
-
-
-before_script: pyclean --verbose .
+before_script: rm --recursive --force --verbose *.py[cod]
 
 
 script:
@@ -32,15 +21,6 @@ script:
     - pip install --upgrade --no-compile css-html-js-minify
 
 
-after_script: true
-
-
-after_success: true
-
-
-after_failure: true
-
-
 notifications:
     email:
         recipients: juancarlospaco@gmail.com
@@ -48,4 +28,6 @@ notifications:
         on_failure: always
 
 
-cache: apt
+cache:
+  apt: true
+  pip: true
