--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,7 @@ script:
     - $TRAVIS_BUILD_DIR/css-html-js-minify.py --prefix temp_ --timestamp --hash --beep --zipy $TRAVIS_BUILD_DIR/jquery-git2.js
     - wget --no-check-certificate https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.css
     - $TRAVIS_BUILD_DIR/css-html-js-minify.py --prefix temp_ --timestamp --wrap --hash --beep $TRAVIS_BUILD_DIR/bootstrap.css
+    - python3 -m unittest $TRAVIS_BUILD_DIR/tests/test_*
     - pip install --upgrade --no-compile css-html-js-minify
 
 
